update maven-surefire-plugin to enable java-13 preview features for unit tests